chore: update to spring boot 4 and testcontainers 2